# rosbag-cpp

src/rosbag_cpp/: CMakeLists.txt  package.xml
src/rosbag_cpp/src/: rosbag_cpp.cpp
src/rosbag_storage/src/: bag.cpp
